# synapse-os

./: .gitignore  Cargo.toml  DEVELOPMENT.md  ENGINEERING.md  FEATURE_UPDATE.md  README.md  description-page-AD.html  docker-compose.yml  ui-migrate.md
.github/workflows/: ci.yml
Open-AutoGLM-main/phone_agent/adb/: connection.py  device.py
backend/: .env  .env.example  Dockerfile  requirements.txt  update_db_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/config/: __init__.py  prompts.py
backend/app/models/: __init__.py  audit.py  inventory.py  loyalty.py  menu.py  modifier.py  order.py  organization.py  payment.py  reservation.py  restaurant.py  review.py  schedule.py  staff.py  table.py  user.py
backend/app/schemas/: __init__.py  agent.py  inventory.py  menu.py  modifier.py  order.py  payment.py  reports.py  reservation.py  schedule.py  table.py  user.py
backend/app/services/: __init__.py  action_executor.py  agent_provider.py  ai.py  autoglm_provider.py  dual_agent_service.py  expo.py  mobile_agent_client.py  multi_agent_coordinator.py  notetaker_agent.py  recommendation.py  reflector_agent.py  screenshot_service.py  task_decomposer.py  triple_agent_service.py  ui_tars_client.py  ui_tars_enhanced.py  web_agent.py  whisper_service.py  zhipu_client.py
backend/tests/: test_task_decomposer.py
frontend/: .env.local  .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: app-build-manifest.json  trace
frontend/.next.bak/server/: server-reference-manifest.json
frontend/.next/cache/: .rscinfo
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/ai-receptionist/: page.tsx
frontend/app/auto-review/: page.tsx
frontend/app/cooking-robot/: error.tsx  page.tsx
frontend/app/customers/: page.tsx
frontend/app/delivery/: page.tsx
frontend/app/expo/: page.tsx
frontend/app/inventory/: page.tsx
frontend/app/kds/: page.tsx
frontend/app/kiosk/: page.tsx
frontend/app/login/: layout.tsx  page.tsx
frontend/app/menu/: page.tsx
frontend/app/multi-location/: page.tsx
frontend/app/music/: page.tsx
frontend/app/orders/: page.tsx
frontend/app/panshaker/: page.tsx
frontend/app/pickup-screen/: page.tsx
frontend/app/pos/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/reservations/: page.tsx
frontend/app/reviews/: page.tsx
frontend/app/schedule/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/staff/: page.tsx
frontend/app/tables/: page.tsx
frontend/app/unauthorized/: page.tsx
frontend/components/ai-assistant/: AIAssistantModal.tsx  ActionOverlay.tsx  ExecutionTimeline.tsx  VoiceRecorder.tsx  index.ts
frontend/components/ai-receptionist/: AIReceptionistContent.tsx
frontend/components/customers/: CustomersContent.tsx
frontend/components/dashboard/: DashboardContent.tsx
frontend/components/kds/: KDSContent.tsx
frontend/hooks/: useActionExecutor.ts  useAgentWebSocket.ts  useKDSWebSocket.ts
frontend/lib/: agent-executor.ts  ai-assistant-store.ts  api.ts  auth.tsx  screenshot-service.ts  supabase-api.ts  supabase.ts  terminal-context.tsx
infra/terraform/: main.tf
legacy-synapse-os/: DEPLOY.md  DEVELOPER.md  MIGRATION_PLAN.md  README.md  index.html  package-lock.json  package.json
legacy-synapse-os/src/: App.tsx  index.css
services/ai-service/: requirements.txt
services/analytics-pipeline/: Cargo.toml
services/analytics-pipeline/src/: main.rs
services/event-bus/: Cargo.toml
services/event-bus/src/: main.rs
services/gateway/: Dockerfile  go.mod
services/order-service/: go.mod
services/payment-engine/: Cargo.toml
services/payment-engine/src/: config.rs  main.rs  payment.rs
services/robot-controller/: CMakeLists.txt
services/robot-controller/include/robot_controller/: gcode_generator.h  robot_controller.h  serial_comm.h
services/robot-controller/src/: gcode_generator.cpp  main.cpp  robot_controller.cpp  serial_comm.cpp
supabase/: schema.sql  seed_data.sql
(+324 files in other folders)
