[workspace]
members = [
    "services/payment-engine",
    "services/event-bus",
    "services/analytics-pipeline",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["PanShaker Services <eng@panshaker.com>"]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
