[package]
name = "analytics-pipeline"
version.workspace = true
edition.workspace = true
description = "Synapse OS 数据分析管道 — 高吞吐量销售数据分析"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }

[[bin]]
name = "analytics-pipeline"
path = "src/main.rs"
