[package]
name = "event-bus"
version.workspace = true
edition.workspace = true
description = "Synapse OS 实时事件总线 — WebSocket 网关 + 消息分发"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite = "0.21"
futures-util = "0.3"

[[bin]]
name = "event-bus"
path = "src/main.rs"
