[package]
name = "payment-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Synapse OS 支付引擎 — Rust 实现，保证金融级安全性"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# 支付集成 (待对接)
# stripe = "待添加"
# square = "待添加"

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
uuid = { version = "1.7", features = ["v4"] }
thiserror = "1.0"

[[bin]]
name = "payment-engine"
path = "src/main.rs"
